--- a/MegaDownload.csproj
+++ b/MegaDownload.csproj
@@ -2,13 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Remove="bin_win_x64\**" />
     <EmbeddedResource Remove="bin_win_x64\**" />
     <None Remove="bin_win_x64\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MegaApiClient" Version="1.10.4" />
   </ItemGroup>
 
   <ItemGroup>
